fix: Sonar issues [DHIS2-17628]